--- a/src/assets/scss/section1.scss
+++ b/src/assets/scss/section1.scss
@@ -33,24 +33,24 @@
         margin-top: -1vw;
     }
 
-    #particles {
-        position: absolute;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        z-index: 10;
-        filter: url("#goo");
-    }
+    // #particles {
+    //     position: absolute;
+    //     left: 0;
+    //     top: 0;
+    //     width: 100%;
+    //     height: 100%;
+    //     z-index: 10;
+    //     filter: url("#goo");
+    // }
 
-    svg {
-        display: block;
-        width: 30px;
-        height: 30px;
-        position: absolute;
-        transform: translateZ(0px);
-        fill: var(--pointBg);
-    }
+    // svg {
+    //     display: block;
+    //     width: 30px;
+    //     height: 30px;
+    //     position: absolute;
+    //     transform: translateZ(0px);
+    //     fill: var(--pointBg);
+    // }
 }
 
 
